feat: file upload button

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -20,6 +20,20 @@ input {
   border-radius: 10px;
   text-decoration: none;
 }
+input[type="file"] {
+  display: none;
+}
+.input-group {
+  display: inline-block;
+  cursor: pointer;
+  font-weight: 500;
+  text-transform: uppercase;
+  margin-right: 10px;
+  margin-left: 10px;
+  padding: 8px 20px;
+  border-radius: 10px;
+  text-decoration: none;
+}
 .MuiOutlinedInput-input-root.Mui-focused,
 .MuiOutlinedInput-notchedOutline {
   border-color: #afbfb7 !important;
